Info section finished… Just the form doesn't work yet

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,10 +98,10 @@ a img {
    src url(../font/Courier.ttf)*/
 input::-moz-focus-inner, button::-moz-focus-inner { border: 0; }
 body {
-  font-family: 'Doppio One';
-}
-a {
-  color: #a52a2a;
+  font-family: 'Open Sans';
+  -moz-text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smooth: never;
 }
 .clear {
   clear: both;
@@ -316,7 +316,6 @@ a {
 #messageCont #sponsors {
   font-size: 0.8em;
   padding: 15px 30px 25px 30px;
-  font-family: 'Doppio One';
 }
 #messageCont #sponsors img {
   margin: 10px;
@@ -332,7 +331,13 @@ a {
   color: #fff;
   padding: 80px 0 70px 0;
   margin-bottom: 100px;
-  font-weight: 1;
+}
+#info a {
+  color: #fff;
+  text-decoration: none;
+}
+#info a:hover {
+  text-decoration: underline;
 }
 #info h2 {
   font-size: 5em;
@@ -341,36 +346,125 @@ a {
 }
 #info h3 {
   margin-top: 30px;
-  font-size: 1em;
+  font-size: 1.1em;
+  font-family: 'Doppio One';
   line-height: 1.3em;
 }
 #info h4 {
-  font-size: 1.4em;
-  line-height: 1.6em;
-  margin-bottom: 25px;
-  font-weight: bold;
-}
-#info p {
-  font-weight: 40;
+  font-size: 1.65em;
+  font-family: 'Doppio One';
+  margin: 14px 0 30px 0;
 }
 #info table {
-  zoom: 1;
   width: 100%;
   margin-top: 50px;
 }
 #info table td {
   vertical-align: top;
-  font-size: 0.95em;
+}
+#info table #facts {
+  font-size: 1.1em;
+}
+#info table #facts a {
+  display: block;
+  cursor: pointer;
+  font-family: 'Open Sans';
+  font-weight: 300;
+}
+#info table #facts a:hover .icon {
+  background: #38acec;
+}
+#info table #facts li .icon {
+  text-decoration: none;
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  font-family: Courier, monospace;
+  font-weight: bold;
+  background: #ffa500;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  text-align: center;
+  line-height: 1.5em;
+  font-size: 1.6em;
+  margin: 0 20px 10px 5px;
+}
+#info table #facts li .icon.date {
+  font-size: 0.75em;
+  line-height: 3.7em;
+}
+#info table #facts li .icon.sprints,
+#info table #facts li .icon.talks,
+#info table #facts li .icon.venue {
+  line-height: 1.6em;
+}
+#info table #facts p {
+  margin: 50px 0 10px 0;
+  font-size: 0.85em;
+  line-height: 1.3em;
+  font-family: 'Open Sans';
+}
+#info table #facts form {
+  position: relative;
+  margin-bottom: 20px;
+}
+#info table #facts form input {
+  border: 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  padding: 0 15px;
+  line-height: 1.4em;
+  height: 42px;
+  font-size: 1.2em;
+  font-family: Courier, monospace;
+}
+#info table #facts form input[name='email'] {
+  width: 260px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+#info table #facts form input[type='submit'] {
+  position: absolute;
+  top: 0px;
+  left: 300px;
+  cursor: pointer;
+  font-family: 'Doppio One';
+  font-size: 0.8em;
+  background: #ffa500;
+  color: #fff;
+  position: relative;
+  font-weight: bold;
+}
+#info table #facts form input[type='submit']:hover {
+  background: #38acec;
 }
 #info table #tweets {
   padding-left: 30px;
   width: 280px;
+  font-size: 0.9em;
+}
+#info table #tweets .facebook {
+  font-family: 'Doppio One';
+  display: inline-block;
+  width: 16px;
+  font-size: 1.4em;
+  text-align: center;
+  font-weight: bold;
+  margin: 0 5px 0 11px;
 }
 #twtr-widget-1 {
-  font-family: 'Doppio One' !important;
-  font-size: 0.9em !important;
+  font-family: 'Open Sans' !important;
+  font-size: 1em !important;
 }
 #twtr-widget-1 .twtr-profile-img {
+  display: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -o-border-radius: 3px;
@@ -381,9 +475,10 @@ a {
   display: none;
 }
 #twtr-widget-1 h4 {
+  font-family: 'Doppio One' !important;
   line-height: 1.4em !important;
-  font-size: 1.7em !important;
-  font-weight: 600;
+  font-size: 2em !important;
+  margin-left: 0 !important;
 }
 #twtr-widget-1 h4 a {
   display: inline-block;
@@ -393,6 +488,8 @@ a {
 }
 #twtr-widget-1 .twtr-timeline {
   height: auto !important;
+  min-height: 392px;
+  z-index: 0;
 }
 #twtr-widget-1 .twtr-tweet {
   position: relative;
@@ -413,6 +510,7 @@ a {
 #twtr-widget-1 .twtr-tweet .twtr-tweet-text em a {
   color: #fff !important;
   text-decoration: none !important;
+  font-family: 'Doppio One' !important;
 }
 #twtr-widget-1 .twtr-tweet .twtr-tweet-text em a:hover {
   text-decoration: underline !important;
@@ -424,6 +522,9 @@ a {
   left: 8px;
   font-weight: bold;
   font-size: 1.3em;
+}
+#twtr-widget-1 .twtr-ft {
+  margin: 0 0 -6px 0;
 }
 #twtr-widget-1 .twtr-ft span {
   float: none;
@@ -447,6 +548,9 @@ a {
 }
 #sessions {
   position: relative;
+}
+#sessions a {
+  color: #a52a2a;
 }
 #sessions #sessionicon {
   -webkit-touch-callout: none;
@@ -531,10 +635,12 @@ a {
 #sessions .sessiondesc .intro {
   display: block;
   padding-bottom: 25px;
-  line-height: 1.2em;
+  line-height: 1.3em;
+  font-family: 'Doppio One';
 }
 #sessions .sessiondesc .intro h4 {
   line-height: 1.3em;
+  margin-bottom: 10px;
   font-size: 5.2em;
   font-weight: bold;
   font-family: Courier, monospace;
@@ -663,6 +769,7 @@ table.colors td:nth-child(1) {
   text-align: center;
 }
 table.colors td:nth-child(2) {
+  font-family: 'Doppio One';
   background: #000;
   color: #fff;
   width: 2.4em;
@@ -680,6 +787,7 @@ table.colors td:nth-child(5) {
   background: #ffa500;
 }
 table.colors td:nth-child(6) {
+  font-family: 'Doppio One';
   background: #38acec;
   width: 30%;
 }
