--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -169,6 +169,7 @@ body
 		padding 31px 40px
 		line-height 1.4em
 		font-size 1.5em
+		font-weight bold
 
 	
 	#sponsors
@@ -182,7 +183,7 @@ body
 			
 
 #info
-	background jscampGreen
+	background linear-gradient(bottom left, green 60%, #009f00 100%)
 	color #fff
 	padding 80px 0 70px 0
 	margin-bottom 100px
@@ -330,7 +331,7 @@ body
 		
 		a:before
 			content: "@"
-			
+
 	.twtr-timeline
 		height auto !important
 		min-height 392px
@@ -379,7 +380,6 @@ body
 
 		
 #js
-	margin-left 5px
 	color #000
 	width 3em
 	height 3em
@@ -387,9 +387,7 @@ body
 	font-family Helvetica, Arial
 	padding 0.8em 0.2em 0em 0.6em
 	background #FFE100
-	
-#love
-	color #EB0E0E
+
 	
 #sessions
 	position relative
