--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -183,7 +183,7 @@ body
 			
 
 #info
-	background linear-gradient(bottom left, green 60%, #009f00 100%)
+	background linear-gradient(bottom left, #009000 0%, green 20%, green 60%, #009f00 100%)
 	color #fff
 	padding 80px 0 70px 0
 	margin-bottom 100px
@@ -214,7 +214,7 @@ body
 			
 	table
 		width 100%
-		margin-top 50px
+		margin-top 60px
 		
 		td
 			vertical-align top
@@ -254,7 +254,7 @@ body
 
 						
 			p
-				margin 50px 0 10px 0
+				margin 100px 0 10px 0
 				font-size 0.85em
 				line-height 1.3em
 				font-family 'Open Sans'
@@ -334,7 +334,7 @@ body
 
 	.twtr-timeline
 		height auto !important
-		min-height 392px
+		min-height 442px
 		z-index 0
 	
 	.twtr-tweet
