--- a/static/css/style.css
+++ b/static/css/style.css
@@ -314,11 +314,11 @@ body {
   font-size: 1.5em;
   font-weight: bold;
 }
-#messageCont #sponsors {
+#messageCont #sponsorsplash {
   font-size: 0.8em;
   padding: 15px 30px 25px 30px;
 }
-#messageCont #sponsors img {
+#messageCont #sponsorsplash img {
   margin: 10px;
   border: 1px solid #eee;
   -webkit-border-radius: 8px;
@@ -346,7 +346,7 @@ h3 {
   margin: 14px 0 30px 0;
 }
 .content p {
-  margin: 50px 0 10px 0;
+  margin: 30px 0 10px 0;
   font-size: 0.85em;
   line-height: 1.3em;
   font-family: 'Open Sans';
@@ -359,14 +359,14 @@ h3 {
   vertical-align: top;
 }
 #info {
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0, #009000), color-stop(0.2, #008000), color-stop(0.6, #008000), color-stop(1, #009f00));
-  background: -webkit-linear-gradient(bottom left, #009000 0%, #008000 20%, #008000 60%, #009f00 100%);
-  background: -moz-linear-gradient(bottom left, #009000 0%, #008000 20%, #008000 60%, #009f00 100%);
-  background: -o-linear-gradient(bottom left, #009000 0%, #008000 20%, #008000 60%, #009f00 100%);
-  background: -ms-linear-gradient(bottom left, #009000 0%, #008000 20%, #008000 60%, #009f00 100%);
-  background: linear-gradient(bottom left, #009000 0%, #008000 20%, #008000 60%, #009f00 100%);
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0, #00a200), color-stop(0.22, #008000), color-stop(0.6, #008000), color-stop(1, #00be00));
+  background: -webkit-linear-gradient(bottom left, #00a200 0%, #008000 22%, #008000 60%, #00be00 100%);
+  background: -moz-linear-gradient(bottom left, #00a200 0%, #008000 22%, #008000 60%, #00be00 100%);
+  background: -o-linear-gradient(bottom left, #00a200 0%, #008000 22%, #008000 60%, #00be00 100%);
+  background: -ms-linear-gradient(bottom left, #00a200 0%, #008000 22%, #008000 60%, #00be00 100%);
+  background: linear-gradient(bottom left, #00a200 0%, #008000 22%, #008000 60%, #00be00 100%);
   color: #fff;
-  padding: 80px 0 70px 0;
+  padding: 0 0 70px 0;
   margin-bottom: 100px;
 }
 #info a {
@@ -382,7 +382,7 @@ h3 {
 #info #facts a {
   display: block;
   cursor: pointer;
-  font-family: 'Open Sans';
+  font-family: 'Doppio One';
   font-weight: 300;
 }
 #info #facts a:hover .icon {
@@ -402,21 +402,22 @@ h3 {
   -ms-border-radius: 3px;
   border-radius: 3px;
   text-align: center;
-  line-height: 1.5em;
+  line-height: 1.6em;
   font-size: 1.6em;
   margin: 0 20px 15px 5px;
+  border: 1px solid #fff;
 }
 #info #facts li .icon.date {
   font-size: 0.75em;
-  line-height: 3.7em;
+  line-height: 3.8em;
 }
 #info #facts li .icon.sprints,
 #info #facts li .icon.talks,
 #info #facts li .icon.venue {
-  line-height: 1.6em;
+  line-height: 1.7em;
 }
 #info #facts p {
-  margin-top: 100px;
+  margin-top: 92px;
 }
 #info #facts form {
   position: relative;
@@ -543,6 +544,31 @@ h3 {
 #twtr-widget-1 .twtr-ft span a {
   margin-left: 27px;
 }
+a.icon {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  -webkit-border-radius: 22px;
+  -moz-border-radius: 22px;
+  -o-border-radius: 22px;
+  -ms-border-radius: 22px;
+  border-radius: 22px;
+  margin: 6px 6px;
+}
+a.icon:hover {
+  background-color: #38acec;
+  -webkit-animation: rotate 0.3s linear;
+  -moz-animation: rotate 0.3s linear;
+  -o-animation: rotate 0.3s linear;
+  -ms-animation: rotate 0.3s linear;
+  animation: rotate 0.3s linear;
+}
+a.icon.twitter {
+  background-image: url("../img/twitter.png");
+  background-repeat: no-repeat;
+  background-position: 6px 6px;
+}
 #js {
   color: #000;
   width: 3em;
@@ -592,6 +618,7 @@ h3 {
   -o-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
+  border: 2px solid #fff;
 }
 #sessions #sessionicon > div#workshops {
   padding: 0.2em 0;
@@ -702,31 +729,6 @@ h3 {
 #sessions .speakers li .links {
   float: right;
 }
-#sessions .speakers li .links a {
-  display: block;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  -webkit-border-radius: 22px;
-  -moz-border-radius: 22px;
-  -o-border-radius: 22px;
-  -ms-border-radius: 22px;
-  border-radius: 22px;
-  margin: 6px 6px;
-}
-#sessions .speakers li .links a:hover {
-  background-color: #38acec;
-  -webkit-animation: rotate 0.3s linear;
-  -moz-animation: rotate 0.3s linear;
-  -o-animation: rotate 0.3s linear;
-  -ms-animation: rotate 0.3s linear;
-  animation: rotate 0.3s linear;
-}
-#sessions .speakers li .links a.twitter {
-  background-image: url("../img/twitter.png");
-  background-repeat: no-repeat;
-  background-position: 6px 6px;
-}
 #sessions .speakers li .name {
   font-family: Courier, monospace;
   color: #38acec;
@@ -743,7 +745,8 @@ h3 {
 #venue {
   clear: both;
   padding: 100px 0 0 0;
-#venuepicture {
+.black {
+			padding: 80px 0;
 			background: -moz-radial-gradient(center, circle cover, #595959 1%, #000000 100%); /* FF3.6+ */
 			background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,#595959), color-stop(100%,#000000)); /* Chrome,Safari4+ */
 			background: -webkit-radial-gradient(center, circle cover, #595959 1%,#000000 100%); /* Chrome10+,Safari5.1+ */
@@ -754,12 +757,11 @@ h3 {
 }
 #venue #venuedesc {
   background-color: #ffa500;
-  padding-bottom: 1000px;
+  padding-bottom: 80px;
 }
 #venue #venuepicture {
   background-color: #000;
   text-align: center;
-  padding: 60px 0;
   margin-bottom: 50px;
 }
 #venue #venuepicture h2 {
@@ -779,7 +781,8 @@ h3 {
   top: 435px;
   left: 530px;
 }
-#venuepicture {
+.black {
+			padding: 80px 0;
 			background: -moz-radial-gradient(center, circle cover, #595959 1%, #000000 100%); /* FF3.6+ */
 			background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,#595959), color-stop(100%,#000000)); /* Chrome,Safari4+ */
 			background: -webkit-radial-gradient(center, circle cover, #595959 1%,#000000 100%); /* Chrome10+,Safari5.1+ */
@@ -787,6 +790,82 @@ h3 {
 			background: -ms-radial-gradient(center, circle cover, #595959 1%,#000000 100%); /* IE10+ */
 			background: radial-gradient(center, circle cover, #595959 1%,#000000 100%); /* W3C */
 		}
+#venue #wifi {
+  padding-left: 80px;
+  width: 200px;
+}
+#venue #wifiicon {
+  text-align: center;
+  height: 134px;
+  width: 138px;
+  margin-bottom: 40px;
+  background: #38acec;
+  border: 2px solid #fff;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  border-radius: 8px;
+}
+#venue #wifiicon img {
+  margin-top: 20px;
+}
+#sponsors {
+  height: 120px;
+}
+#team {
+  background: #38acec;
+  padding: 60px 0;
+}
+#team #logoanim {
+  margin: -10px 0 0 -40px;
+  float: left;
+  width: 340px;
+  height: 200px;
+  font-size: 3em;
+}
+#team #logoanim * {
+  color: #fff !important;
+}
+#team #teamdesc {
+  margin-left: 360px;
+  color: #fff;
+}
+#team #teamdesc li {
+  padding: 30px 0;
+  height: 30px;
+}
+#team #teamdesc li img {
+  float: left;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  border-radius: 8px;
+  margin-left: 5px;
+  width: 60px;
+  height: 60px;
+}
+#team #teamdesc li .name {
+  padding-top: 6px;
+  font-family: 'Doppio One';
+  font-size: 1.3em;
+  line-height: 1.3em;
+}
+#team #teamdesc li a {
+  color: #fff;
+  text-decoration: none;
+}
+#team #teamdesc li a:hover {
+  text-decoration: underline;
+}
+#team #teamdesc li a.twitter {
+  float: left;
+  margin: 1px 5px 0 12px;
+}
+#team #teamdesc li .mail {
+  font-size: 0.8em;
+}
 #top {
   position: fixed;
   top: -1px;
