--- a/static/css/style.css
+++ b/static/css/style.css
@@ -405,7 +405,7 @@ h3 {
   line-height: 1.6em;
   font-size: 1.6em;
   margin: 0 20px 15px 5px;
-  border: 1px solid #fff;
+  border: 1px solid #eee;
 }
 #info #facts li .icon.date {
   font-size: 0.75em;
@@ -424,7 +424,7 @@ h3 {
   margin-bottom: 20px;
 }
 #info #facts form input {
-  border: 0;
+  border: 1px solid #eee;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -o-border-radius: 3px;
@@ -441,6 +441,7 @@ h3 {
   position: absolute;
   top: 0px;
   left: 0px;
+  border: 0;
 }
 #info #facts form input[type='submit'] {
   position: absolute;
