--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -254,7 +254,7 @@ h3
 				line-height 1.6em
 				font-size 1.6em
 				margin 0 20px 15px 5px
-				border 1px solid #fff
+				border 1px solid #eee
 						
 				&.date
 					font-size 0.75em
@@ -270,7 +270,7 @@ h3
 			margin-bottom 20px
 			
 			input
-				border 0
+				border 1px solid #eee
 				border-radius 3px
 				padding 0 15px
 				line-height 1.4em
@@ -283,6 +283,7 @@ h3
 				position absolute
 				top 0px
 				left 0px
+				border 0
 				
 			input[type='submit']
 				position absolute
